<?xml version="1.0" encoding="utf-8"?>
<android.widget.GridLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:columnCount="1"
    tools:context=".`FirstQuestionActivity.java`">

    <TextView
        android:id="@+id/text_view_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/first_question"
        android:textColor="@color/colorYellow"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arme_legere"
        android:layout_marginTop="50dp"
        android:background="@drawable/button"
        android:layout_gravity="center_horizontal"
        android:onClick="setButtonSelected"/>

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chars"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:layout_gravity="center_horizontal"
        android:onClick="setButtonSelected"
        />

    <Button
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avions"
        android:background="@drawable/button"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:onClick="setButtonSelected"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:background="@color/colorSubmit"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:onClick="submitQuestion"/>

</android.widget.GridLayout >