<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:orientation="vertical"
    tools:context=".`FirstQuestionActivity.java`">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/text_view_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/second_question"
        android:textColor="@color/colorYellow"
        android:layout_marginTop="20dp"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible"/>

    <android.widget.LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <android.widget.LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dix_neuf_cents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dix_neuf_cents"
                android:textColor="@color/colorYellow"/>

            <android.widget.LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/percent_user1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorYellow"/>

                <TextView
                    android:id="@+id/corection_percent_user1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/colorRed"/>

            </android.widget.LinearLayout>

        </android.widget.LinearLayout>

        <android.widget.GridLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount= "5"
            android:rowCount= "2"
            android:layout_marginLeft="20dp">

            <com.amnesty.quizzamnesty.views.PersonView
                android:id="@+id/person1"
                android:layout_width="50dp"
                android:layout_height="@dimen/person_height"
                android:layout_weight="1"/>

            <com.amnesty.quizzamnesty.views.PersonView
                android:id="@+id/person2"
                android:layout_width="50dp"
                android:layout_height="85dp"
                android:layout_weight="1"/>

            <com.amnesty.quizzamnesty.views.PersonView
                android:id="@+id/person3"
                android:layout_width="50dp"
                android:layout_height="85dp"
                android:layout_weight="1"/>

            <com.amnesty.quizzamnesty.views.PersonView
                android:id="@+id/person4"
                android:layout_width="50dp"
                android:layout_height="85dp"
                android:layout_weight="1"/>

            <com.amnesty.quizzamnesty.views.PersonView
                android:id="@+id/person5"
                android:layout_width="50dp"
                android:layout_height="85dp"
                android:layout_weight="1"/>

            <com.amnesty.quizzamnesty.views.PersonView
                android:id="@+id/person6"
                android:layout_width="50dp"
                android:layout_height="85dp"
                android:layout_weight="1"/>

            <com.amnesty.quizzamnesty.views.PersonView
                android:id="@+id/person7"
                android:layout_width="50dp"
                android:layout_height="85dp"
                android:layout_weight="1"/>

            <com.amnesty.quizzamnesty.views.PersonView
                android:id="@+id/person8"
                android:layout_width="50dp"
                android:layout_height="85dp"
                android:layout_weight="1"/>

            <com.amnesty.quizzamnesty.views.PersonView
                android:id="@+id/person9"
                android:layout_width="50dp"
                android:layout_height="85dp"
                android:layout_weight="1"/>

            <com.amnesty.quizzamnesty.views.PersonView
                android:id="@+id/person10"
                android:layout_width="50dp"
                android:layout_height="85dp"
                android:layout_weight="1"/>

        </android.widget.GridLayout>

    </android.widget.LinearLayout>

    <android.widget.LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <android.widget.LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/today"
                android:textColor="@color/colorYellow"/>

            <android.widget.LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/percent_user2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorYellow"/>

                <TextView
                    android:id="@+id/corection_percent_user2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text=""
                    android:textColor="@color/colorRed"/>

            </android.widget.LinearLayout>

        </android.widget.LinearLayout>

        <android.widget.GridLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount= "5"
            android:rowCount= "2"
            android:layout_marginLeft="20dp">

            <com.amnesty.quizzamnesty.views.PersonView
                android:id="@+id/person11"
                android:layout_width="50dp"
                android:layout_height="@dimen/person_height"
                android:layout_weight="1"/>

            <com.amnesty.quizzamnesty.views.PersonView
                android:id="@+id/person12"
                android:layout_width="50dp"
                android:layout_height="85dp"
                android:layout_weight="1"/>

            <com.amnesty.quizzamnesty.views.PersonView
                android:id="@+id/person13"
                android:layout_width="50dp"
                android:layout_height="85dp"
                android:layout_weight="1"/>

            <com.amnesty.quizzamnesty.views.PersonView
                android:id="@+id/person14"
                android:layout_width="50dp"
                android:layout_height="85dp"
                android:layout_weight="1"/>

            <com.amnesty.quizzamnesty.views.PersonView
                android:id="@+id/person15"
                android:layout_width="50dp"
                android:layout_height="85dp"
                android:layout_weight="1"/>

            <com.amnesty.quizzamnesty.views.PersonView
                android:id="@+id/person16"
                android:layout_width="50dp"
                android:layout_height="85dp"
                android:layout_weight="1"/>

            <com.amnesty.quizzamnesty.views.PersonView
                android:id="@+id/person17"
                android:layout_width="50dp"
                android:layout_height="85dp"
                android:layout_weight="1"/>

            <com.amnesty.quizzamnesty.views.PersonView
                android:id="@+id/person18"
                android:layout_width="50dp"
                android:layout_height="85dp"
                android:layout_weight="1"/>

            <com.amnesty.quizzamnesty.views.PersonView
                android:id="@+id/person19"
                android:layout_width="50dp"
                android:layout_height="85dp"
                android:layout_weight="1"/>

            <com.amnesty.quizzamnesty.views.PersonView
                android:id="@+id/person20"
                android:layout_width="50dp"
                android:layout_height="85dp"
                android:layout_weight="1"/>

        </android.widget.GridLayout>

    </android.widget.LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible"/>

    <com.amnesty.quizzamnesty.views.SubmitArrowView
        android:id="@+id/submit"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:onClick="validate"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible"/>

</android.widget.LinearLayout >